service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pinproxy
spec:
  ports:
  - port: 8081
    targetPort: 8081
