ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pinproxy
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - pinproxy.kennedn.com
    secretName: pinproxy
  ingressClassName: public
  rules:
  - host: pinproxy.kennedn.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pinproxy
            port:
              number: 8081
